# app/Config/Routes.php
@@ -5,25 +5,47 @@ use CodeIgniter\Router\RouteCollection;
 /**
  * @var RouteCollection $routes
  */
-$routes->get('/', 'Home::index');
+$routes->get('/', function () {
+    redirect('documentation');
+});
 
 
-$routes->group('api/v1', ['namespace' => 'App\Controllers'], function ($routes) {
+
+$routes->group('api/v1', ['namespace' => 'App\Controllers', 'filter'=>'cors'], function ($routes) {
+
+    $routes->options('(:any)', static function () {
+        // Establecer los encabezados CORS
+        $response = service('response');
+        $response->setHeader('Access-Control-Allow-Origin', '*');
+        $response->setHeader('Access-Control-Allow-Methods', 'GET, POST, OPTIONS, PUT, DELETE,PATCH');
+        $response->setHeader('Access-Control-Allow-Headers', 'Content-Type, Access-Control-Allow-Headers, Authorization, X-Requested-With');
+        $response->setHeader('Access-Control-Allow-Credentials', 'true');
+    
+        // Enviar una respuesta vacía con un estado 204 No Content
+        return $response->setStatusCode(204)->setBody('');
+    });
+
     // Autenticación
     $routes->post('auth/login', 'AuthController::login');
+    $routes->post('auth/refresh', 'AuthController::refreshToken');
+    $routes->post('auth/logout', 'AuthController::logout');
 
     // // Públicos
     $routes->get('productos', 'ProductoController::index');
+    $routes->get('productos/(:num)', 'ProductoController::show/$1');
+
     $routes->get('usuarios', 'UsuarioController::index');
     $routes->get('categorias', 'CategoriaController::index');
 
     // Protegidos
-    // $routes->group('', ['filter' => 'jwt'], function ($routes) {
-    // $routes->group('',  function ($routes) {
-        $routes->resource('productos',['controller' => 'ProductoController']);
-        $routes->resource('usuarios',['controller' => 'UsuarioController']);
-        $routes->resource('categorias',['controller' => 'CategoriaController']);
-    // });
+    $routes->group('', ['filter' => 'jwt'], function ($routes) {
+        // $routes->group('',  function ($routes) {
+        $routes->resource('productos', ['controller' => 'ProductoController']);
+        $routes->resource('usuarios', ['controller' => 'UsuarioController']);
+        $routes->resource('categorias', ['controller' => 'CategoriaController']);
+
+        $routes->get('auth/me', 'AuthController::me');
+    });
 });
 
 $routes->get('documentation', function () {
